Fix Footer spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -103,7 +103,7 @@ p{
 }
 
 .contact{
-  padding: 90px 15px;
+  padding-top: 50px;
 }
 
 .contact p{
